<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/dp_10_padding">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/home_index_icon" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/search_result_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jingeng_keji" />

        <TextView
            android:id="@+id/search_result_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/search_result_time" />

        <TextView
            android:id="@+id/search_result_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_result_item_title"
            android:layout_marginTop="@dimen/dp_10_padding"
            android:maxEms="2"
            android:text="@string/about_tc_pt" />
    </RelativeLayout>
</LinearLayout>
